--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Trabajo</title>
+  <title>Inicio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,14 +22,13 @@
           <td v-for="juego in juegos" class="card-container">
               <div class="card card-flip">
                 <div class="front card-block">
-                  <img width="300px" height="350px
-                  " :src="juego.imagen" :alt="juego.nombre">
+                  <img width="300px" height="350px" :src="juego.imagen" :alt="juego.nombre">
                 </div>
                 <div class="back card-block">
                   <p>Año: {{juego.anio}}</p>
                   <p>Genero: {{juego.nombreg}}</p>
                   <p>Consola: {{juego.nombrec}}</p>
-                  <div><a class="btn btn-primary" :href="'juegou.html?id='+ juego.id">Editar</a>
+                  <div v-if="login==true"><a class="btn btn-primary" :href="'juegou.html?id='+ juego.id">Editar </a>&nbsp;
                     <button type="button" class="btn btn-danger" v-on:click="eliminar(juego.id)">Eliminar</button>
                   </div>
                 </div>
