--- a/juegoa.html
+++ b/juegoa.html
@@ -28,10 +28,10 @@
           <div class="oas">
             <div v-for="g in generos" class="btn-group" :key="g.id">
               <input class="btn-check" v-model.number="genero" :value="g.id" type="radio" :id="'btnradiog'+g.id">
-              <label class="btn btn-outline-dark " :for="'btnradiog'+g.id"> {{g.nombreg}}</label>
+              <label class="btn btn-outline-dark " :for="'btnradiog'+g.id"> {{g.nombreg}} </label>
             </div>
           </div>
-          <label class="btn btn-outline-primary" v-on:click="esconderg = true">Añadir otro genero</label>
+          <label class="btn btn-outline-primary" v-on:dblclick="esconderg = false" v-on:click="esconderg = true">Añadir otro genero</label>
           <div v-show="esconderg" bv><input type="text" name="nombreng" id="nombreng" v-model="nombreg">
             <button type="button" class="btn btn-success btn-sm"
               v-on:click="grabarg() , esconderg=false">Guardar</button>
@@ -43,7 +43,7 @@
               <label class="btn btn-outline-dark " :for="'btnradio'+c.id">{{c.nombrec}}</label>
             </div>
           </div>
-          <button class="btn btn-outline-primary" v-on:click="esconderc = true">Añadir otra consola </button>
+          <button class="btn btn-outline-primary" v-on:dblclick="esconderc = false"  v-on:click="esconderc = true">Añadir otra consola </button>
           <div v-show="esconderc"><input type="text" name="nombrenc" id="nombrenc" v-model="nombrec">
             <button type="button" class="btn btn-success btn-sm"
               v-on:click="grabarc(), esconderc=false;">Guardar</button>
@@ -67,7 +67,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
     </script>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script><!--Link de VUE-->
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="./js/agregar.js"></script>
   <script src="./js/general.js"></script>
 
