--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/ind copy.css">
   <link rel="stylesheet" href="./css/general.css">
-
+  <link rel="shortcut icon" href="game_5930147.png" type="image/x-icon">
+    <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
+    </script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
+    </script>
+  <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script defer src="./js/ind.js"></script>
+  <script defer src="./js/general.js"></script>
 </head>
 
 <body>
-  <header>
-  </header>
+  <header></header>
   <main>
     <div id="app">
       <table>
@@ -22,33 +30,24 @@
           <td v-for="juego in juegos" class="card-container">
               <div class="card card-flip">
                 <div class="front card-block">
-                  <img width="300px" height="350px" :src="juego.imagen" :alt="juego.nombre">
+                  <img width="200px" height="250px" :src="juego.imagen" :alt="juego.nombre">
                 </div>
                 <div class="back card-block">
                   <p>Año: {{juego.anio}}</p>
                   <p>Genero: {{juego.nombreg}}</p>
                   <p>Consola: {{juego.nombrec}}</p>
                   <div v-if="login==true"><a class="btn btn-primary" :href="'juegou.html?id='+ juego.id">Editar </a>&nbsp;
-                    <button type="button" class="btn btn-danger" v-on:click="eliminar(juego.id)">Eliminar</button>
+                    <button type="button" class="btn btn-danger" @click="eliminar(juego.id)">Eliminar</button>
                   </div>
                 </div>
-              </div>
+              </div> 
           </td>
         </tr>
       </table>
     </div>
   </main>
-  <footer>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-    </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
-    </script>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="./js/ind.js"></script>
-  <script src="./js/general.js"></script>
+  <footer></footer>
+
 </body>
 
 </html>
