--- a/juegou.html
+++ b/juegou.html
@@ -10,12 +10,19 @@
   <link rel="stylesheet" href="./css/update.css">
   <link rel="stylesheet" href="./css/general.css">
   <link rel="shortcut icon" href="game_5930147.png" type="image/x-icon">
+  <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
+    </script>
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
+    </script>
+  <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script defer src="./js/editar.js"></script>
+  <script defer src="./js/general.js"></script>
 </head>
 
 <body>
-  <header>
-
-  </header>
+  <header></header>
   <main>
     <div id="app">
       <table width=" 40%">
@@ -28,49 +35,38 @@
           <div>Género</div>
           <div class="oas">
             <div v-for="g in generos" class="btn-group">
-              <input class="btn-check" v-model.number="genero" :value="g.id" type="radio" :id="'btnradiog'+g.id">
+              <input class="btn-check" v-model.number="genero" :value="g.id" type="radio" :id="'btnradiog'+g.id" @click="eli= g.id">
               <label class="btn btn-outline-dark " :for="'btnradiog'+g.id"> {{g.nombreg}}</label>
-              </div>
+            </div>
           </div>
-          <label class="btn btn-outline-primary"  v-on:dblclick="esconderg = false" v-on:click="esconderg = true">Añadir otro genero</label>
+          <label class="btn btn-outline-primary" @dblclick="esconderg = false" @click="esconderg = true">Añadir otro genero</label>
+          &nbsp;<button type="button" class="btn btn-danger" @click="eliminarg(eli)">Eliminar genero</button>
           <div v-show="esconderg" bv><input type="text" name="nombreng" id="nombreng" v-model="nombreg">
-            <button type="button" class="btn btn-success btn-sm" v-on:click="grabarg() , esconderg=false">Guardar</button>
+            <button type="button" class="btn btn-success btn-sm" @click="grabarg() , esconderg=false,nombreg= null ">Guardar</button>
           </div>
-
           <div>Consola</div>
           <div class="oas">
             <div v-for="c in consolas" class="btn-group">
-              <input class="btn-check" v-model.number="consola" type="radio" :value="c.id" :id="'btnradio'+c.id">
+              <input class="btn-check" v-model.number="consola" type="radio" :value="c.id" :id="'btnradio'+c.id" @click="elic= c.id">
               <label class="btn btn-outline-dark " :for="'btnradio'+c.id" for="{{consola}}">{{c.nombrec}}</label>
             </div>
           </div>
-          <button class="btn btn-outline-primary" v-on:dblclick="esconderc = false"  v-on:click="esconderc = true">Añadir otra consola </button>
-          <div v-show="esconderc"><input type="text" name="nombrenc" id="nombrenc" v-model="nombrec">
-            <button type="button" class="btn btn-success btn-sm" v-on:click="grabarc(), esconderc=false;">Guardar</button>
+          <button class="btn btn-outline-primary" @dblclick="esconderc = false" @click="esconderc = true">Añadir otra consola </button>
+          &nbsp;<button type="button" class="btn btn-danger" @click="eliminarc(elic)">Eliminar consola</button>
+          <div v-show="esconderc"><input type="text" name="nombrenc" id="nombrenc" v-model="nombrec" >
+            <button type="button" class="btn btn-success btn-sm" @click="grabarc(), esconderc=false, nombrec= null">Guardar</button>
           </div>
           <br>
           <label for="imagen">Imagen</label> <br>
           <input type="text" name="imagen" id="imagen" v-model="imagen">
           <div id="g"><img width="200" :src="imagen" alt="">
           </div>
-          <div id="g"><button type="button" class="btn btn-success" v-on:click="grabar()">Grabar</button> </div>
+          <div id="g"><button type="button" class="btn btn-success" @click="grabar()">Grabar</button> </div>
         </td>
       </table>
     </div>
   </main>
-  <footer>
-
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-    </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
-    </script>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="./js/editar.js"></script>
-  <script src="./js/general.js"></script>
+  <footer></footer>
 
 </body>
 
