--- a/registro.html
+++ b/registro.html
@@ -7,12 +7,9 @@
   <title>Ingreso - Codigo Gamer</title>
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
   <link rel="shortcut icon" href="game_5930147.png" type="image/x-icon">
-  
   <link rel="stylesheet" href="./css/general.css">
   <link rel="stylesheet" href="./css/styles.css">
-  
 </head>
 
 <body>
@@ -21,7 +18,7 @@
   <div class="section" id="app">
     <div class="container">
       <div class="row h-75 justify-content-center">
-        <div class="col-12 text-center align-self-center py-5">
+        <div class="text-center align-self-center py-5">
           <div class="section pb-5 pt-5 pt-sm-2 text-center">
             <h6 class="mb-0 pb-3"><span>Iniciar Sesion </span><span>Registrarse</span></h6>
             <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
@@ -43,7 +40,6 @@
                           <i class="input-icon uil uil-lock-alt"></i>
                         </div>
                         <button class="btn mt-4" id="ingreso" @click="validl()" >Ingresar </button>
-                    <p class="mb-0 mt-4 text-center"><a href="" class="link">Olvidaste tu contraseña?</a></p>
                   </div>
                 </div>
               </div>
@@ -74,8 +70,7 @@
                       <span id="validarclaver"></span>
                       <i class="input-icon uil uil-lock-alt"></i>
                     </div>
-                    <button class="btn mt-4" id="registro"  @click="validr()">Registrar
-                    </button>
+                    <button class="btn mt-4" id="registro"  @click="validr()">Registrar</button>
                   </div>
                 </div>
               </div>
@@ -89,7 +84,8 @@
   <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script><script  src="./js/registro_py.js"></script> <script src="./js/general.js"></script>
+  <script  src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script  src="./js/registro_py.js"></script> <script src="./js/general.js"></script>
 </body>
 
 </html>
